Progress support added

--- a/project_fgantt/views/project_task_view.xml
+++ b/project_fgantt/views/project_task_view.xml
@@ -13,6 +13,7 @@
             <fgantt date_start="date_start"
                       date_stop="date_end"
                       default_group_by="project_id"
+                      progress="progress"
                       event_open_popup="true">
                 <field name="user_id"/>
                 <field name="planned_hours"/>
